--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
             <tr>
                 <th class="text-center">#</th>
                 <th class="text-center">Task Name</th>
-                <th class="text-center">Priority</th>
+                <th class="text-center" id="priorityId" onclick="sortTasksList()">Priority <i class="fa-sharp fa-solid fa-caret-down"></i></th>
                 <th class="text-center">Actions</th>
             </tr>
         </thead>
